force-app/main/default/objects/Lead/fields/IsTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>IsTerraqueo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Caixa que deve ser marcada se o personagem tiver a Terra como seu planeta de origem.</description>
    <inlineHelpText>Caixa que deve ser marcada se o personagem tiver a Terra como seu planeta de origem.</inlineHelpText>
    <label>É Terráqueo?</label>
    <type>Checkbox</type>
</CustomField>