force-app/main/default/objects/Lead/fields/JaAtuouHeroi__c.field-meta.xml
<CustomField>
    <fullName>JaAtuouHeroi__c</fullName>
    <label>Já Atuou como Herói?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não sei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>