force-app/main/default/objects/Lead/fields/NivelHeroi__c.field-meta.xml
<CustomField>
    <fullName>NivelHeroi__c</fullName>
    <description>Indique o nível atual do personagem.</description>
    <inlineHelpText>Selecione entre as opções dispostas qual o nível especifico de heroismo.</inlineHelpText>
    <label>Nível de Herói</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspirante</fullName>
            </value>
            <value>
                <fullName>Júnior</fullName>
            </value>
            <value>
                <fullName>Pleno</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>