force-app/main/default/objects/Lead/validationRules/ObrigaTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaTelefone</fullName>
    <active>false</active>
    <description>Obriga o usuário a cadastrar o numero</description>
    <errorConditionFormula>Phone == null || Phone == &quot; &quot;</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Obrigatório o preenchimento do campo Telefone</errorMessage>
</ValidationRule>