force-app/main/default/objects/Lead/listViews/Leads_desqualificados.listView-meta.xml
<ListView>
    <fullName>Leads_desqualificados</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Closed - Not Converted</value>
    </filters>
    <label>Leads desqualificados</label>
</ListView>